<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/btsss"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center"
        android:text="@string/bts_quiz"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="30dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/Gray"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/please_enter_your_name"
                android:textColor="@color/Gray"
                android:textSize="16sp"
                android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="20dp"
                    >

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/e_g_shashi"
                        android:textColorHint="@color/Purple"
                        android:inputType="textCapWords"
                        android:textColor="@color/Gray"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/design_default_color_primary"
                    android:text="@string/lets_go"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"

                    />




        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>